trying to make install_software.sh correctly configure and make radare2

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,10 +1,16 @@
 Vagrant.configure('2') do |config|
 
     config.vm.hostname = 'vetsec-wg'
-    config.vm.box = 'bento/ubuntu-18.04'
+    config.vm.box = 'bento/ubuntu-18.04'   
     config.vm.synced_folder './', '/vagrant'
 
+    #config.vm.network :forwarded_port, guest: 9000, host: 9000
+    #config.vm.network :forwarded_port, guest: 9000, host: 9000
+    
+    # Below are also the username and password to log in via GUI if 
+    # vb.gui is set to 'true'
     config.ssh.username = 'vagrant'
+    config.ssh.password = 'vagrant'
 
     config.vm.provider :virtualbox do |vb|
         vb.name = 'vetsec-wargame'
@@ -14,10 +20,6 @@ Vagrant.configure('2') do |config|
 
     config.vm.provision :shell do |shell|
         shell.privileged = false
-        shell.inline = <<-SHELL
-            sudo apt-get -y install gdb
-            git clone https://github.com/longld/peda.git ~/peda
-            echo "source ~/peda/peda.py" >> ~/.gdbinit
-        SHELL
+        shell.inline = "bash /vagrant/install_software.sh"
     end
 end
